v3/crates/graphql/schema/tests/snapshots/graphql_schema__tests__role_agnostic_schemas_have_all_permissions.snap
---
source: crates/graphql/schema/src/lib.rs
expression: "make_role_agnostic_sdl_from_metadata_file(PathBuf::from(\"tests/metadata_with_select_permissions.json\").as_ref())"
---
schema {
  query: Query 
}

type Author {
  author_id: Int!
  first_name: String!
  last_name: String!
}

scalar Boolean

scalar Float

scalar ID

scalar Int

interface Node {
  id: ID!
}

type Query {
  AuthorByID(author_id: Int!): Author
  node(id: ID!): Node
}

scalar String
